perfgun refactoring
Signed-off-by: arozumenko <artyom.rozumenko@gmail.com>